Fix ballot measure cell alignment with larger big board font

--- a/less/results.less
+++ b/less/results.less
@@ -270,11 +270,11 @@
             }
 
             .description {
-                width: 50%;
+                width: 48%;
             }
 
             .choice {
-                width: 9%;
+                width: 10%;
 
                 &.no { background: @redDim; }
                 &.yes { background: @greenDim; }
